--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
         /* The Main Card */
         .container { background: var(--card); padding: 40px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); text-align: center; width: 90%; max-width: 500px; border: 1px solid #334155; }
         
-        h1 { margin-bottom: 10px; font-size: 24px; background: linear-gradient(90deg, #00f2ea, #ff0050); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        h1 { margin-bottom: 10px; font-size: 24px; background: linear-gradient(90deg, #00f2ea, #ff0050); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent; }
         p { color: #94a3b8; margin-bottom: 30px; }
 
         /* The Button */
