Updated the recognition language to Indian English

--- a/static/index.html
+++ b/static/index.html
@@ -60,7 +60,7 @@
         const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
         const recognition = new SpeechRecognition();
         
-        recognition.lang = 'en-US'; 
+        recognition.lang = 'en-IN'; 
         recognition.interimResults = false;
 
         // DEBUG: Verify button click works
