Updated Background color

--- a/static/index.html
+++ b/static/index.html
@@ -17,3 +17,14 @@
             --text-main: #ffffff;
             --text-secondary: #a0a0a0;
         }
+        body {
+            font-family: 'Outfit', sans-serif;
+            background-color: #050505;
+            color: var(--text-main);
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+        }
