--- a/static/index.html
+++ b/static/index.html
@@ -77,6 +77,7 @@
             letter-spacing: 1px;
             background: linear-gradient(90deg, #fff, #a5a5a5);
             -webkit-background-clip: text;
+            background-clip: text;
             -webkit-text-fill-color: transparent;
         }
 
